Fix search results details not showing in url - movie search results title and page number were not showing in the url. this was causing caching issue in web browser when navigating back to previous results. Fix included adding to SearchByTitle POST endpoint a redirect to a new GET endpoint. - updated search results presentation. removed extra movie information that would require additional API calls for no real benefit. - updated detail page. Fixed image ratio. Added Recommend similar movies button.

--- a/MovieRecommender/wwwroot/css/site.css
+++ b/MovieRecommender/wwwroot/css/site.css
@@ -61,7 +61,13 @@ body::before {
     border-color: #007bff;
 }
 
-.detail-page-actor-image {
+.detail-page-image-box {
     border-radius: 50%;
-    aspect-ratio: 1;
+}
+
+.detail-page-actor-image {
+    width: 4rem;
+    height: 4rem;
+    object-fit: cover;
+    border-radius: 50%;
 }
